[Book servicer] fix bug